fix: allow images to overflow

--- a/src/styles/entry/images.scss
+++ b/src/styles/entry/images.scss
@@ -5,4 +5,12 @@
 .wp-block-post-content > figure {
   margin-inline-start: 0;
   margin-inline-end: 0;
+
+  &.size-large {
+    margin-inline-end: -12.5rem;
+  }
+}
+
+.wp-block-post-featured-image {
+  max-width: 1000px !important;
 }
